MVP working - x and o showing on screen, winner logging and returning

--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -69,13 +69,17 @@ body {
 .board-container {
   display: grid;
   grid-template-columns: auto auto auto;
-  padding: 10px;
+  /* padding: 10px; */
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 .square {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
+  /* padding: 20px; */
   font-size: 30px;
   text-align: center;
+  /* height: 30px;
+  width: 30px; */
 }
