--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -90,11 +90,44 @@ body {
   padding: 10px;
   max-width: 700px;
   margin: auto;
-  background-image: url("img/spring.jpg");
+  /* background-image: url("img/spring.jpg"); */
+  /* background: url("img/spring.jpg"); */
+    animation-name: spin;
+    animation-duration: 1s;
+    animation-iteration-count: 2s;
+    animation-timing-function: linear;
   background-size: cover;
-  opacity: 0.7;
+   opacity:  0.7;
+  /* opacity: 0.7; */
   /* width: 25%;  */
+
 }
+  @keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+.harder {
+      animation-name: spin;
+      animation-duration: 3s;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
+    background-size: cover;
+     opacity:  0.7;
+
+  }
+    @keyframes spin {
+      from {
+          transform:rotate(0deg);
+      }
+      to {
+          transform:rotate(360deg);
+      }
+  }
 
 
 
@@ -107,7 +140,20 @@ body {
   text-align: center;
   vertical-align: center;
   height: 80px;
+  opacity:  1;
   /* background-image: linear-gradient(to right, rgb(51, 153, 51), rgb(0, 204, 102), rgb(51, 102, 0)); */
   /* width: 80px;  */
 
 }
+
+button {
+  position: relative;
+  display: block;
+  text-align: center;
+  max-width: 700px;
+  margin: auto;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+/* The alert message box */
