--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -1,51 +1,3 @@
-/* body {
-  margin: 0;
-  background-color: black;
-  color: white;
-  text-size-adjust: 100%;
-}
-
-*, *:before, *:after {
-    -moz-box-sizing: inherit;
-    box-sizing: inherit;
-}
-div {
-  display: block;
-}
-
-.game {
-  /* background-color: black; */
-  /* position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 600px;
-    height: 600px;
-    margin-left: -300px;
-    margin-top: -370px;
-    -webkit-user-select: none;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent;
-    tap-highlight-color: transparent;
-}
-board-container {
-  width: 100%;
-  heigth: 100%;
-  border: 1px solid pink;
-}
-
-.square {
-  float: left;
-width: 33.333333333%;
-height: 33.333333333%;
-border-width: 5px;
-border-color: #fff;
-/* -webkit-transition: background-color .1s;
--moz-transition: background-color .1s;
-transition: background-color .1s;
-will-change: background-color,border-color;
-cursor: pointer; */
-
-
 .square.left {
   border-right-style: solid;
 }
@@ -83,6 +35,7 @@ body {
   background-image: url("img/guildcolourful.jpg");
   background-size: cover;
   /* background-size: cover; */
+  font-family: 'Alegreya', serif;
 }
 .board-container {
   display: grid;
@@ -90,6 +43,7 @@ body {
   padding: 10px;
   max-width: 700px;
   margin: auto;
+  margin-top: 50px;
   /* background-image: url("img/spring.jpg"); */
   /* background: url("img/spring.jpg"); */
     animation-name: spin;
@@ -146,14 +100,37 @@ body {
 
 }
 
-button {
+.button-container {
   position: relative;
-  display: block;
   text-align: center;
   max-width: 700px;
-  margin: auto;
+  margin: 0 auto;
+  padding: 20px;
+}
+button {
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  max-width: 700px;
   padding: 20px;
   margin-top: 20px;
+  background-image: linear-gradient(45deg, #d6cfb0 0%, #e489b2 100%);
+  border-image: linear-gradient(45deg, #d6cfb0 0%, #e489b2 100%);
+  cursor: pointer;
+  letter-spacing: 0.075em;
+  padding: .8em 1em;
+  margin: auto 2em;
+  align-self: center;
+  text-transform: uppercase;
+  z-index: 1;
+  box-shadow: -0.5em 0.5em rgba(16, 24, 50, 0);
+  /* transform-origin: left bottom; */
+  -webkit-transition: all 200ms ease-in-out;
+  -moz-transition: all 200ms ease-in-out;
+  -o-transition: all 200ms ease-in-out;
+  transition: all 200ms ease-in-out;
+  font-family: 'Alegreya', serif;
+}
 }
 
 /* The alert message box */
