--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -116,8 +116,6 @@ body {
   position: fixed;
   right: 81%;
   padding: 5px;
-  border: 1px solid black;
-
 }
 
 .player2-score {
@@ -127,6 +125,7 @@ body {
   position: fixed;
   left: 81%;
   text-align: center;
+    padding: 5px;
 }
 
 .button-container {
