clicks disabled after winner, clciks enabeled after play again clicked

--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -158,6 +158,8 @@ button {
   font-family: 'Alegreya', serif;
 
 }
-}
 
-/* The alert message box */
+
+.disable-click {
+  pointer-events: none;
+}
